# tabIt

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: cache.py  jobs.py  main.py  videoid.py
docs/: PROGRESS.md
docs/design/: TabIt.dc.html
docs/superpowers/plans/: 2026-07-09-tabit-engine.md  2026-07-09-tabit-extension.md  2026-07-09-tabit-webapp.md  2026-07-10-tabit-beat-ribbon.md  2026-07-11-tabit-conservative-meter.md  2026-07-11-tabit-step-progress.md  2026-07-12-tabit-helper-packaging.md
docs/superpowers/specs/: 2026-07-09-tabit-design.md  2026-07-09-tabit-extension-design.md  2026-07-10-tabit-beat-ribbon-design.md  2026-07-11-tabit-conservative-chords-meter-design.md  2026-07-11-tabit-step-progress-design.md  2026-07-12-tabit-helper-packaging-design.md
engine/: bass.py  beats.py  chords.py  cli.py  ingest.py  key.py  meter.py  notes.py  pipeline.py  postprocess.py  scales.py  schema.py  separate.py
extension/: build.mjs  manifest.json  package-lock.json  package.json  test-setup.ts  tsconfig.json  vitest.config.ts
extension/src/: messages.test.ts  messages.ts  smoke.test.ts
extension/src/background/: api.ts  handler.test.ts  handler.ts  index.ts
extension/src/content/: index.test.ts  index.ts  mount.test.ts  mount.ts  navigation.test.ts  navigation.ts  page.test.ts  page.ts
helper/: cli.py  health.py  launchd.py  paths.py  plist.py  warmup.py
packaging/: install.sh
tests/: conftest.py  test_bass.py  test_beats.py  test_chords.py  test_ingest.py  test_key.py  test_meter.py  test_notes.py  test_pipeline.py  test_postprocess.py  test_scales.py  test_schema.py  test_separate.py  test_smoke.py
tests/api/: test_cache.py  test_jobs.py  test_main.py  test_videoid.py
tests/helper/: test_cli.py  test_health.py  test_launchd.py  test_plist.py  test_warmup.py
tests/integration/: conftest.py  test_accuracy.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css
(+27 files in other folders)
